# coeus-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: python.yaml
coeus/: Cargo.toml  build.rs
coeus-python/: Cargo.toml  README.md  build.sh  coeus_python.pyi  pyproject.toml
coeus-python/src/: analysis.rs  debugging.rs  lib.rs  parse.rs  vm.rs
coeus/coeus_analysis/: Cargo.toml
coeus/coeus_analysis/src/: lib.rs  scripting.rs
coeus/coeus_analysis/src/analysis/: dex.rs  instruction_flow.rs  mod.rs  native.rs  relations.rs
coeus/coeus_debug/: Cargo.toml
coeus/coeus_debug/src/: jdwp.rs  lib.rs  main.rs  models.rs
coeus/coeus_emulation/: Cargo.toml
coeus/coeus_emulation/src/: lib.rs
coeus/coeus_emulation/src/scripting/: mod.rs
coeus/coeus_emulation/src/vm/: dynamic_runtime.rs  mod.rs  runtime.rs
coeus/coeus_macros/: Cargo.toml
coeus/coeus_macros/src/: lib.rs
coeus/coeus_models/: Cargo.toml
coeus/coeus_models/src/: lib.rs  models.rs  scripting.rs
coeus/coeus_models/src/models/: android.rs  binaryobject.rs  dexfile.rs  encoding.rs  files.rs  instruction.rs  multidexfile.rs
coeus/coeus_parse/: Cargo.toml
coeus/coeus_parse/src/: extraction.rs  lib.rs  scripting.rs
coeus/coeus_parse/src/dex/: mod.rs
coeus/coeus_parse/src/dex/graph/: callgraph.rs  information_graph.rs  mod.rs
coeus/coeus_parse/src/dex/graph/analysis/: mod.rs
coeus/coeus_parse/src/dex/graph/analysis/dynamic/: mod.rs
coeus/coeus_parse/src/dex/graph/analysis/static/: flow.rs  mod.rs  models.rs
coeus/src/: lib.rs
examples/callgraph/: callgraph.py
examples/certpinner/: README.md  certpinner.py  hook.js.j2
examples/cross-references/: README.md  cross.py  test-proguard-bc-exception.apk  test-proguard.apk
examples/dead_branch/: DeadBranch.java  README.md  dead_branch.py  run.sh
examples/debugger_test/: README.md  debugger_test.py
examples/proguard/: proguard.py
examples/runtime-functions/: Test.java  build.sh  runtime_functions.py
examples/runtime-functions/ch/ubique/: SuperClass.java
examples/string-decryptor/: buildClass.sh  stringDecryptor.py
examples/string-decryptor/ch/ubique/: Xor.java
examples/xor/: README.md  Xor.java  run.sh  xor.py
src/: lib.rs  main.rs
