[package]
name = "coeus-cli"
version = "1.1.0"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
coeus = {version = "0.1.1", path = "./coeus"}

regex = "1"

log = "0.4.14"
env_logger = "0.9.0"
clap = "2.33.3"
lazy_static = "1.4.0"
base64 = "0.13.0"

# rhai = {version = "1.1.0"}
instant = {version = "0.1", features = ["now"]}

serde_json = "1.0.61"
serde = {version = "1.0.123", features = ["derive"]}

abxml = {version = "0.8.2", default-features = false}
serde-xml-rs = "0.5.1"

petgraph = "0.6.0"
rayon = "1.5.0"
serde_millis = "0.1.1"

indicatif = {version = "0.16.2", features = ["rayon"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"
web-sys = {version = "0.3.47", features = ["Worker", "DedicatedWorkerGlobalScope"]}
console_error_panic_hook = "0.1"

[dependencies.getrandom]
version = "*"
features = ["js"]

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
fs_extra = "1.2"

[features]
wasm = ["instant/stdweb"]
distribute = []