[package]
name = "coeus-cli"
version = "1.1.0"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
coeus = {version = "0.1.1", path = "./coeus"}

regex = "1.6.0"

log = "0.4.17"
env_logger = "0.9.0"
clap = "3.2.8"
lazy_static = "1.4.0"
base64 = "0.13.0"

# rhai = {version = "1.1.0"}
instant = { version = "0.1.12", features = ["now"] }

serde_json = "1.0.82"
serde = { version = "1.0.138", features = ["derive"] }

abxml = { version = "0.8.2", default-features = false }
serde-xml-rs = "0.5.1"

petgraph = "0.6.2"
rayon = "1.5.3"
serde_millis = "0.1.1"

indicatif = { version = "0.16.2", features = ["rayon"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.58", features = ["Worker", "DedicatedWorkerGlobalScope"] }
console_error_panic_hook = "0.1.7"

[dependencies.getrandom]
version = "0.2.7"
features = ["js"]

[dev-dependencies]
criterion = "0.3.6"

[build-dependencies]
fs_extra = "1.2.0"

[features]
wasm = ["instant/stdweb"]
distribute = []
