[package]
name = "coeus-python"
version = "0.2.14"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "coeus_python"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.23.3", features = [
    "extension-module",
    "abi3-py37",
    "generate-import-lib",
    "py-clone"
] }
# Hint: if you want to use this library in another Rust binary, use the following line instead:
#pyo3 = { version = "0.18.1", features = ["abi3-py37", "generate-import-lib"] }
coeus = { version = "0.1.1", path = "../coeus" }
regex = "1.11.1"
rayon = "1.10"
serde_json = "1.0.133"
env_logger = "0.11.5"
