[package]
name = "coeus_analysis"
version = "0.1.1"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coeus_models = {path = "../coeus_models"}
coeus_macros = {path = "../coeus_macros"}
coeus_parse = {path = "../coeus_parse"}

petgraph = "0.6.0"
goblin = "0.4.3"
lazy_static = "1.4"
regex = "1.4"
rayon = "1.5"
log = "0.4.14"
rand = {version = "0.8.3", features = ["getrandom"]}
serde = {version = "1.0.123", features = ["derive"]}

base64 = {version = "0.13", optional = true}
serde_json = {version = "1.0", optional = true}
# rhai = {version = "1.1.0", optional = true}

[features]
# rhai-script = ["rhai", "serde_json", "base64"]
# wasm = ["rhai/wasm-bindgen"]