[package]
name = "coeus_debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coeus_models = {path = "../coeus_models"}
byteorder = "1.4.3"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0.68"
log = "0.4.17"
rand = "0.8.5"
