[package]
name = "coeus_models"
version = "0.1.1"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coeus_macros = {path = "../coeus_macros"}
serde = {version = "1.0.123", features = ["derive", "rc"]}
log = "0.4"
regex = "1.4"
ux = "0.1.3"
leb128 = "0.2"
rayon = "1.5"
bitflags = "1.2.1"
goblin = "0.4.3"
petgraph = "0.6.0"
rand = {version = "0.8.3", features = ["getrandom"]}
getrandom = "0.2"

rhai = {version = "1.1.0", optional = true}
cesu8 = "1.1.0"
serde-xml-rs = "0.5.1"
serde_json = "1.0"

[features]
rhai-script = ["rhai"]
wasm = ["rhai/wasm-bindgen", "getrandom/js", "getrandom/wasm-bindgen"]
