[package]
name = "coeus_parse"
version = "0.1.1"
authors = ["Patrick Amrein <amrein@ubique.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coeus_macros = {path = "../coeus_macros"}
coeus_emulation = {path = "../coeus_emulation"}
coeus_models = {path = "../coeus_models"}

petgraph = "0.6.0"
rayon = "1.5"
goblin = "0.6"
bitflags = "1.2.1"
abxml = {version = "0.8.2", default-features = false}
serde-xml-rs = "0.6"
serde = {version = "1.0.123", features = ["derive"]}
log = "0.4"
regex = "1.4"
ux = "0.1.3"
leb128 = "0.2"
base64 = "0.21"
serde_json = "1.0"
instant = {version = "0.1"}

# rhai = {version = "1.1.0", optional = true}
# graphviz-sys = {version = "0.1.3", optional = true}
rand = {version = "0.8.3", features = ["getrandom"]}
getrandom = "0.2"
# [target.'cfg(target_arch = "wasm32")'.dependencies.rhai]
# features = ["wasm-bindgen"]

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies.rhai]
# features = []

[dependencies.zip]
version = "0.6"
default-features = false
features = ["deflate"]

[features]
# rhai-script = ["rhai"]
# graphviz = ["graphviz-sys"]
wasm = [ "instant/stdweb", "getrandom/js", "getrandom/wasm-bindgen"]